feature: added web-server config render function

--- a/themes/minimalistic/template.html
+++ b/themes/minimalistic/template.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Pavel Sapachev" />
 
-    <link href="assets/css/main.css" rel="preload" as="style" />
+    <link href="/%40assets/css/main.css" rel="preload" as="style" />
 
     <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700" rel="stylesheet" type="text/css" />
-    <link href="assets/css/main.css" rel="stylesheet" type="text/css" />
+    <link href="/%40assets/css/main.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body class="bg-myfantasy">
