feat: add version number to rendered pages

--- a/themes/minimalistic/template.html
+++ b/themes/minimalistic/template.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Pavel Sapachev" />
+    <meta name="version" content="{{ version }}" />
 
-    <link href="/%40assets/css/main.css" rel="preload" as="style" />
-    <link href="/%40assets/css/main.css" rel="stylesheet" type="text/css" />
+    <link href="/%40assets/css/main.css?v{{ version }}" rel="stylesheet" type="text/css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
