--- a/pages/index.html
+++ b/pages/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Error Pages</title>
+    <title>The Error Pages</title>
 
     <link href="./assets/main.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -12,7 +12,6 @@
       (async () => {
         // Personal Token to page Debug
         const token = "";
-
         const params = token
           ? {
               headers: new Headers({
