fix: demo links on personal site

--- a/pages/index.html
+++ b/pages/index.html
@@ -83,15 +83,15 @@
 
     <h2>Demo</h2>
     <ul class="list-inside list-disc px-4">
-      <li><a href="./demo/400.html" target="_blank" rel="nofollow">400 Bad Request</a></li>
-      <li><a href="./demo/401.html" target="_blank" rel="nofollow">401 Unauthorized</a></li>
-      <li><a href="./demo/403.html" target="_blank" rel="nofollow">403 Forbidden</a></li>
-      <li><a href="./demo/404.html" target="_blank" rel="nofollow">404 Not Found</a></li>
-      <li><a href="./demo/410.html" target="_blank" rel="nofollow">410 Gone</a></li>
-      <li><a href="./demo/500.html" target="_blank" rel="nofollow">500 Internal Server Error</a></li>
-      <li><a href="./demo/502.html" target="_blank" rel="nofollow">502 Bad Gateway</a></li>
-      <li><a href="./demo/503.html" target="_blank" rel="nofollow">503 Service Unavailable</a></li>
-      <li><a href="./demo/504.html" target="_blank" rel="nofollow">504 Gateway Timeout</a></li>
+      <li><a href="https://sapachev.com/error-pages/bad-request" target="_blank" rel="nofollow">400 Bad Request</a></li>
+      <li><a href="https://sapachev.com/error-pages/unauthorized" target="_blank" rel="nofollow">401 Unauthorized</a></li>
+      <li><a href="https://sapachev.com/error-pages/forbidden" target="_blank" rel="nofollow">403 Forbidden</a></li>
+      <li><a href="https://sapachev.com/error-pages/not-found" target="_blank" rel="nofollow">404 Not Found</a></li>
+      <li><a href="https://sapachev.com/error-pages/gone" target="_blank" rel="nofollow">410 Gone</a></li>
+      <li><a href="https://sapachev.com/error-pages/internal-server-error" target="_blank" rel="nofollow">500 Internal Server Error</a></li>
+      <li><a href="https://sapachev.com/error-pages/bad-gateway" target="_blank" rel="nofollow">502 Bad Gateway</a></li>
+      <li><a href="https://sapachev.com/error-pages/service-unavailable" target="_blank" rel="nofollow">503 Service Unavailable</a></li>
+      <li><a href="https://sapachev.com/error-pages/gateway-timeout" target="_blank" rel="nofollow">504 Gateway Timeout</a></li>
     </ul>
 
     <h2>Precompiled Packages:</h2>
