--- a/pages/index.html
+++ b/pages/index.html
@@ -3,6 +3,10 @@
   <head>
     <title>The Error Pages</title>
 
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Pavel Sapachev" />
+
     <link href="./assets/main.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -47,6 +51,7 @@
       })();
     </script>
   </head>
+
   <body class="container mx-auto px-4 py-8 text-slate-700 sm:w-max">
     <h1>The Error Pages</h1>
     <p class="mt-4">
@@ -70,7 +75,7 @@
 
     <img class="xs:w-fit mt-8 -mb-8" src="./assets/screenshot.png" alt="Preview of Error 404" />
 
-    <h2>Main Features:</h2>
+    <h2>Main Features<a id="main-features"></a></h2>
     <ul class="list-inside list-disc px-4">
       <li>Static pages with simple and responsive design</li>
       <li>Lightweight and fast running</li>
@@ -81,7 +86,7 @@
       <li>Built-in web server config generator (Nginx)</li>
     </ul>
 
-    <h2>Demo</h2>
+    <h2>Demo<a id="demo"></a></h2>
     <ul class="list-inside list-disc px-4">
       <li><a href="https://sapachev.com/error-pages/bad-request" target="_blank" rel="nofollow">400 Bad Request</a></li>
       <li><a href="https://sapachev.com/error-pages/unauthorized" target="_blank" rel="nofollow">401 Unauthorized</a></li>
@@ -94,9 +99,10 @@
       <li><a href="https://sapachev.com/error-pages/gateway-timeout" target="_blank" rel="nofollow">504 Gateway Timeout</a></li>
     </ul>
 
-    <h2>Precompiled Packages:</h2>
+    <h2>Precompiled Packages<a id="precompiled-packages"></a></h2>
+    <p>If you don't want to build pages by yourself, you can download one of automatically created packages with the latest version:</p>
     <ul id="list" class="list-inside list-disc px-4">
-      <p>Wait to load packages list...</p>
+      <p>Wait please to load packages list...</p>
       <noscript>Unable to load packages list due to disabled JavaScript</noscript>
     </ul>
   </body>
