--- a/pages/index.html
+++ b/pages/index.html
@@ -100,7 +100,10 @@
     </ul>
 
     <h2>Precompiled Packages<a id="precompiled-packages"></a></h2>
-    <p>If you don't want to build pages by yourself, you can download one of automatically created packages with the latest version:</p>
+    <p>
+      In case if you don't want to build error pages by yourself, you are can download automatically created packages with the latest
+      version of sources:
+    </p>
     <ul id="list" class="list-inside list-disc px-4">
       <p>Wait please to load packages list...</p>
       <noscript>Unable to load packages list due to disabled JavaScript</noscript>
