feat: add google-site-verification meta tag

--- a/pages/index.html
+++ b/pages/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Pavel Sapachev" />
+    <meta name="google-site-verification" content="u6mdu3zGwoDUSuIushU-3PcKt5PYRvoUNfrykQn7-MQ" />
 
     <link href="./assets/main.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
