--- a/pages/index.html
+++ b/pages/index.html
@@ -6,12 +6,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Pavel Sapachev" />
+    <meta name="description" content="The Error Pages is a tool to create static pages to display web server errors" />
+    <meta name="google-site-verification" content="u6mdu3zGwoDUSuIushU-3PcKt5PYRvoUNfrykQn7-MQ" />
 
     <link href="./assets/main.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@400;600&display=swap" rel="stylesheet" />
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LWEPD44MND"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
+      gtag('config', 'G-LWEPD44MND');
+    </script>
+    
     <script>
       (async () => {
         // Personal Token to page Debug
@@ -76,7 +88,7 @@
     <img class="xs:w-fit mt-8 -mb-8" src="./assets/screenshot.png" alt="Preview of Error 404" />
 
     <h2>Main Features<a id="main-features"></a></h2>
-    <ul class="list-inside list-disc px-4">
+    <ul class="list-inside list-disc px-4 mt-2">
       <li>Static pages with simple and responsive design</li>
       <li>Lightweight and fast running</li>
       <li>Extensibility</li>
@@ -87,7 +99,7 @@
     </ul>
 
     <h2>Demo<a id="demo"></a></h2>
-    <ul class="list-inside list-disc px-4">
+    <ul class="list-inside list-disc px-4 mt-2">
       <li><a href="https://sapachev.com/error-pages/bad-request" target="_blank" rel="nofollow">400 Bad Request</a></li>
       <li><a href="https://sapachev.com/error-pages/unauthorized" target="_blank" rel="nofollow">401 Unauthorized</a></li>
       <li><a href="https://sapachev.com/error-pages/forbidden" target="_blank" rel="nofollow">403 Forbidden</a></li>
@@ -100,11 +112,11 @@
     </ul>
 
     <h2>Precompiled Packages<a id="precompiled-packages"></a></h2>
-    <p>
+    <p class="mt-2">
       In case if you don't want to build error pages by yourself, you are can download automatically created packages with the latest
       version of sources:
     </p>
-    <ul id="list" class="list-inside list-disc px-4">
+    <ul id="list" class="list-inside list-disc px-4 mt-2">
       <p>Wait please to load packages list...</p>
       <noscript>Unable to load packages list due to disabled JavaScript</noscript>
     </ul>
