fix: minor text and html fixes

--- a/pages/index.html
+++ b/pages/index.html
@@ -13,17 +13,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@400;600&display=swap" rel="stylesheet" />
-    
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LWEPD44MND"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-      gtag('config', 'G-LWEPD44MND');
+      gtag("config", "G-LWEPD44MND");
     </script>
-    
+
     <script>
       (async () => {
         // Personal Token to page Debug
@@ -88,7 +90,7 @@
     <img class="xs:w-fit mt-8 -mb-8" src="./assets/screenshot.png" alt="Preview of Error 404" />
 
     <h2>Main Features<a id="main-features"></a></h2>
-    <ul class="list-inside list-disc px-4 mt-2">
+    <ul class="mt-2 list-inside list-disc px-4">
       <li>Static pages with simple and responsive design</li>
       <li>Lightweight and fast running</li>
       <li>Extensibility</li>
@@ -99,7 +101,7 @@
     </ul>
 
     <h2>Demo<a id="demo"></a></h2>
-    <ul class="list-inside list-disc px-4 mt-2">
+    <ul class="mt-2 list-inside list-disc px-4">
       <li><a href="https://sapachev.com/error-pages/bad-request" target="_blank" rel="nofollow">400 Bad Request</a></li>
       <li><a href="https://sapachev.com/error-pages/unauthorized" target="_blank" rel="nofollow">401 Unauthorized</a></li>
       <li><a href="https://sapachev.com/error-pages/forbidden" target="_blank" rel="nofollow">403 Forbidden</a></li>
@@ -112,11 +114,8 @@
     </ul>
 
     <h2>Precompiled Packages<a id="precompiled-packages"></a></h2>
-    <p class="mt-2">
-      In case if you don't want to build error pages by yourself, you are can download automatically created packages with the latest
-      version of sources:
-    </p>
-    <ul id="list" class="list-inside list-disc px-4 mt-2">
+    <p class="mt-2">Here you can download the latest version packages according to existing locales:</p>
+    <ul id="list" class="mt-2 list-inside list-disc px-4">
       <p>Wait please to load packages list...</p>
       <noscript>Unable to load packages list due to disabled JavaScript</noscript>
     </ul>
