fix: revert css path to absolute

--- a/themes/minimalistic/template.html
+++ b/themes/minimalistic/template.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Pavel Sapachev" />
     <meta name="version" content="{{ version }}" />
 
-    <link href="./%40assets/css/main.css?v{{ version }}" rel="stylesheet" type="text/css" />
+    <link href="/%40assets/css/main.css?v{{ version }}" rel="stylesheet" type="text/css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
