fix: edit all texts

--- a/pages/index.html
+++ b/pages/index.html
@@ -69,8 +69,8 @@
   <body class="container mx-auto px-4 py-8 text-slate-700 sm:w-max">
     <h1>The Error Pages</h1>
     <p class="mt-4">
-      Lightweight tool to create static HTTP Error Pages in minimalistic adaptive and accessible design with customization and localization
-      support.
+      A lightweight tool for creating static custom HTTP error pages featuring a minimalistic, adaptive, and accessible design, along with
+      support for customization and localization.
     </p>
 
     <div class="mt-2">
@@ -91,13 +91,13 @@
 
     <h2>Main Features<a id="main-features"></a></h2>
     <ul class="mt-2 list-inside list-disc px-4">
-      <li>Static pages with simple and responsive design</li>
+      <li>Static pages featuring a simple and responsive design</li>
       <li>Lightweight and fast running</li>
       <li>Extensibility</li>
       <li>Customization</li>
       <li>Localization (i18n)</li>
       <li>Accessibility (a11y)</li>
-      <li>Built-in web server config generator (Nginx)</li>
+      <li>Built-in web server configuration generator (Nginx)</li>
     </ul>
 
     <h2>Demo<a id="demo"></a></h2>
@@ -116,8 +116,8 @@
     <h2>Precompiled Packages<a id="precompiled-packages"></a></h2>
     <p class="mt-2">Here you can download the latest version packages according to existing locales:</p>
     <ul id="list" class="mt-2 list-inside list-disc px-4">
-      <p>Wait please to load packages list...</p>
-      <noscript>Unable to load packages list due to disabled JavaScript</noscript>
+      <p>Wait please to load the packages list...</p>
+      <noscript>Unable to load the packages list due to disabled JavaScript</noscript>
     </ul>
   </body>
 </html>
